# eom

./: .build.yml  .travis.yml  AUTHORS  CNAME  COPYING  ChangeLog  HACKING  HACKING-PLUGINS.md  Makefile.am  NEWS  README  THANKS  TODO  autogen.sh  configure.ac  eom.pot  index.html  makepot  meson.build  meson_options.txt  update-authors.pl  update-changelog.sh
bindings/python/: Makefile.am  Makefile.in  eom.defs  eom.override
cut-n-paste/toolbar-editor/: Makefile.am  Makefile.in  egg-editable-toolbar.c  egg-editable-toolbar.h  egg-toolbar-editor.c  egg-toolbar-editor.h  egg-toolbars-model.c  egg-toolbars-model.h  meson.build
data/: Makefile.am  Makefile.in  eom-image-properties-dialog.ui  eom-multiple-save-as-dialog.ui  eom-preferences-dialog.ui  eom-toolbar.xml  eom-ui.xml  eom.about  eom.appdata.xml.in  eom.appdata.xml.in.in  eom.convert  eom.css  eom.desktop.in.in  eom.pc.in  eom.schemas.in  gtkrc  meson.build  metadata-sidebar.ui  org.mate.eom.gschema.xml.in  org.mate.eom.gschema.xml.in.in
data/icons/: Makefile.am  Makefile.in  meson.build
data/pixmaps/: Makefile.am  Makefile.in
doc/reference/: Makefile.am  Makefile.in  eom-docs.sgml.in  eom-sections.txt  meson.build
help/: ChangeLog  LINGUAS  Makefile.am  Makefile.in  eom.pot  meson.build
help/C/: eom.xml  index.docbook  legal.xml
help/af/: af.po
help/am/: am.po
help/an/: an.po
help/ar/: ar.po
help/ar_AE/: ar_AE.po
help/as/: as.po
help/ast/: ast.po
help/az/: az.po
help/be/: be.po
help/bg/: bg.po
help/bn/: bn.po
help/bn_IN/: bn_IN.po
help/bqi/: bqi.po
help/br/: br.po
help/bs/: bs.po
help/ca/: ca.po
help/ca@valencia/: ca@valencia.po
help/cmn/: cmn.po
help/crh/: crh.po
help/cs/: cs.po
help/csb/: csb.po
help/cv/: cv.po
help/cy/: cy.po
help/da/: da.po
help/de/: de.po
help/de_AT/: de_AT.po
help/de_CH/: de_CH.po
help/dz/: dz.po
help/el/: el.po
help/en_AU/: en_AU.po
help/en_BR/: en_BR.po
help/en_CA/: en_CA.po
help/en_DE/: en_DE.po
help/en_GB/: en_GB.po
help/en_US/: en_US.po
help/eo/: eo.po
help/es/: es.po
help/es_419/: es_419.po
help/es_AR/: es_AR.po
help/es_CL/: es_CL.po
help/es_CO/: es_CO.po
help/es_CR/: es_CR.po
help/es_DO/: es_DO.po
help/es_EC/: es_EC.po
help/es_ES/: es_ES.po
help/es_MX/: es_MX.po
help/es_NI/: es_NI.po
help/es_PA/: es_PA.po
help/es_PE/: es_PE.po
help/es_PR/: es_PR.po
help/es_SV/: es_SV.po
help/es_US/: es_US.po
help/es_UY/: es_UY.po
help/es_VE/: es_VE.po
help/et/: et.po
help/eu/: eu.po
help/fa/: fa.po
help/fi/: fi.po
help/fil/: fil.po
help/fo/: fo.po
help/fr/: fr.po
help/fr_CA/: fr_CA.po
help/fr_FR/: fr_FR.po
help/frp/: frp.po
help/fur/: fur.po
help/fy/: fy.po
help/ga/: ga.po
help/gd/: gd.po
help/gl/: gl.po
help/gu/: gu.po
help/gug_PY/: gug_PY.po
help/ha/: ha.po
help/he/: he.po
help/hi/: hi.po
help/hr/: hr.po
help/hu/: hu.po
help/hy/: hy.po
help/ia/: ia.po
help/id/: id.po
help/ie/: ie.po
help/ig/: ig.po
help/is/: is.po
help/it/: it.po
help/ja/: ja.po
help/ja_JP/: ja_JP.po
help/jv/: jv.po
help/ka/: ka.po
help/kab/: kab.po
help/kk/: kk.po
help/km/: km.po
help/kn/: kn.po
help/ko/: ko.po
help/ks/: ks.po
help/ku/: ku.po
help/ku_IQ/: ku_IQ.po
help/ky/: ky.po
help/la/: la.po
help/lb/: lb.po
help/lfn/: lfn.po
help/li/: li.po
help/lo/: lo.po
help/lt/: lt.po
help/lt_LT/: lt_LT.po
help/lv/: lv.po
help/mai/: mai.po
help/mg/: mg.po
help/mi/: mi.po
help/mk/: mk.po
help/ml/: ml.po
help/mn/: mn.po
help/mr/: mr.po
help/ms/: ms.po
help/my/: my.po
help/nah/: nah.po
help/nan/: nan.po
help/nb/: nb.po
help/nds/: nds.po
help/ne/: ne.po
help/nl/: nl.po
help/nn/: nn.po
help/no/: no.po
help/nqo/: nqo.po
help/nso/: nso.po
help/oc/: oc.po
help/om/: om.po
help/or/: or.po
help/pa/: pa.po
help/pl/: pl.po
help/pl_PL/: pl_PL.po
help/pms/: pms.po
help/ps/: ps.po
help/pt/: pt.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/ru_RU/: ru_RU.po
help/rw/: rw.po
help/sc/: sc.po
help/sco/: sco.po
help/si/: si.po
help/sk/: sk.po
help/sl/: sl.po
help/so/: so.po
help/sq/: sq.po
help/sr/: sr.po
help/sr@latin/: sr@latin.po
help/sv/: sv.po
help/sw/: sw.po
help/ta/: ta.po
help/te/: te.po
help/tg/: tg.po
help/th/: th.po
help/tk/: tk.po
help/tl/: tl.po
help/tr/: tr.po
help/ts/: ts.po
help/tt/: tt.po
help/tzm/: tzm.po
help/ug/: ug.po
help/uk/: uk.po
help/uk_UA/: uk_UA.po
help/ur/: ur.po
help/ur_PK/: ur_PK.po
help/uz/: uz.po
help/uz@Latn/: uz@Latn.po
help/vi/: vi.po
help/wa/: wa.po
help/xh/: xh.po
help/yi/: yi.po
help/yo/: yo.po
help/zh/: zh.po
help/zh-Hans/: zh-Hans.po
help/zh_CN/: zh_CN.po
help/zh_HK/: zh_HK.po
help/zh_TW/: zh_TW.po
help/zu/: zu.po
jpegutils/: Makefile.am  Makefile.in  jpegint-8a.h  meson.build  transupp-6b.c  transupp-6b.h  transupp-8a.c  transupp-8a.h
plugins/: ChangeLog  Makefile.am  Makefile.in  meson.build
plugins/fullscreen/: eom-fullscreen-plugin.c  eom-fullscreen-plugin.h  fullscreen.eom-plugin.desktop.in  fullscreen.plugin.desktop.in  (+2 more)
src/: Makefile.am  Makefile.in  eom-application-activatable.c  eom-application-activatable.h  eom-application-internal.h  eom-application-service.xml  eom-application.c  eom-application.h  eom-clipboard-handler.c  eom-clipboard-handler.h  eom-close-confirmation-dialog.c  eom-close-confirmation-dialog.h  eom-config-keys.h  eom-debug.c  eom-debug.h  eom-dialog.c  eom-dialog.h  eom-enum-types.c.template  eom-enum-types.h.template  eom-enums.h  eom-error-message-area.c  eom-error-message-area.h  eom-exif-details.c  eom-exif-details.h  eom-exif-util.c  eom-exif-util.h  eom-file-chooser.c  eom-file-chooser.h  eom-image-jpeg.c  eom-image-jpeg.h  eom-image-private.h  eom-image-save-info.c  eom-image-save-info.h  eom-image.c  eom-image.h  eom-job-queue.c  eom-job-queue.h  eom-jobs.c  eom-jobs.h  eom-list-store.c  (+68 more)
thumbnailer/: Makefile.am  eom-thumbnailer.c  eom-thumbnailer.thumbnailer  eom-thumbnailer.thumbnailer.in  meson.build
(+711 files in other folders)
