include $(top_srcdir)/mate-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = eom
DOC_ENTITIES = legal.xml
DOC_INCLUDES =
DOC_FIGURES = 					\
	figures/eom_save_as_window.png		\
	figures/eom_start_window.png		\
	figures/eom_toolbar_editor_window.png

DOC_LINGUAS = ar ca cs da de el en_GB es eu fi fr it ja ko oc pa pl pt_BR ru sv th uk zh_CN zh_TW

-include $(top_srcdir)/git.mk
