@YELP_HELP_RULES@

HELP_ID = eom
HELP_FILES = index.docbook legal.xml
HELP_MEDIA = 					\
	figures/eom_save_as_window.png		\
	figures/eom_start_window.png		\
	figures/eom_toolbar_editor_window.png

HELP_LINGUAS = ar ca cs da de el en_GB es eu fi fr it ja ko oc pa pl pt_BR ru sv th uk zh_CN zh_TW

-include $(top_srcdir)/git.mk
